# agentic-ai

Fast-API/server/Assignment/: registration_api.py
data_processing/: 01_numpy.py  02_pandas.py  03_opencv.py  pyproject.toml
data_processing/data/: employee_data.json  student_data.csv
fast_api/non_sql/: package-lock.json
fast_api/non_sql/client/: ShowProduct.html  product.html
fast_api/non_sql/server/: index.py  main.py  pyproject.toml
fast_api/postgres_sql/server/: alembic.ini  main.py  pyproject.toml
fast_api/postgres_sql/server/alembic/: env.py
fast_api/postgres_sql/server/alembic/versions/: 1079d20df42b_added_user_id_to_todos.py  6822530bd469_create_todos_table.py  795c759c0880_create_table_user.py  8f4342e597a4_add_uuid_api_key.py  d726ca888696_create_users_table.py  dde88c886186_add_data.py
fast_api/postgres_sql/server/config/: database.py
fast_api/postgres_sql/server/controllers/: todos_controller.py  user_controllers.py
fast_api/postgres_sql/server/models/: todo_model.py
fast_api/postgres_sql/server/routes/: todos_route.py  user_routes.py
fast_api/postgres_sql/server/utils/: utils.py
model_development/: bulk_prediction_cat_dog.py  cat_dog_model.py  emotion_model.py  fastapi_prediction_emotion.py  fastapi_prediction_model.py  split_dataset.py  split_emotion_dataset.py
